--- a/rules/10_markers/bipartites.yaml
+++ b/rules/10_markers/bipartites.yaml
@@ -46,7 +46,7 @@
 # B) Ellipse verbale "ne + verbe" sans pas/plus/jamais/rien/personne
 # ——————————————————————————————————————————————————————————————
 - id: NE_ELLIPTIQUE_VERBAL
-  when_pattern: '\b(?P<part1>n[''’]?|ne)\s*\w+'
+  when_pattern: "(?i)(?P<part1>\\bn['’]|\\bne)\\s+\\w+"
   cue_label: ["{part1}"]
   group: "bipartite"
   notes: >
