correction des phrases exemples pour detecter les multimatqueurs on est a la phrase 2

--- a/rules/10_markers/conjonction_coordination.yaml
+++ b/rules/10_markers/conjonction_coordination.yaml
@@ -29,8 +29,8 @@
 - id: NI_COMBINAISONS
   when_pattern: >
     (?P<first>
-      pas\s+d(?:e|u|’|'')\s+[^,;:.]+?
-      |sans\s+[^,;:.]+?
+      pas\s+d(?:e|u|’|'')\s+[^.]+?
+      |sans\s+[^.]+?
       |aucun|aucune|aucuns|aucunes
       |nul|nulle|nuls|nulles
       |jamais
