--- a/rules/10_markers/bipartites.yaml
+++ b/rules/10_markers/bipartites.yaml
@@ -8,7 +8,7 @@
       \b(?P<part2a>personne)\b\s+(?P<part1a>n['’]?|ne)
       |
       # Cas standard : "ne … pas/plus/jamais/rien/personne/guère/point/nul"
-      \b(?P<part1b>n['’]?|ne)\s*(?P<part2b>pas|plus|jamais|rien|personne|guère|point|nul)\b
+      \b(?P<part1b>ne|n['’]?)(?:\s+\w+){0,2}\s+(?P<part2b>pas|plus|jamais|rien|personne|guère|point|nul)\b
     )
   cue_label: ["{part2a} {part1a}", "{part1b} {part2b}"]
   group: "bipartite"
@@ -24,8 +24,8 @@
     exclude_verbs_from_cue: true
     case_insensitive: true
     max_token_gap: 8
-    stop_punct: [".",";",":"]
-    fallback_char_gap: 40
+  stop_punct: [",", ".", ";", ":"]
+  fallback_char_gap: 40
   negative_guards:
     - '\brien que\b'
     - '\b(?:n[''’]|ne)\b\s+que\b'
